fixing overflow on bubbles/pagination

--- a/static/css/new_timetable/new_timetable.css
+++ b/static/css/new_timetable/new_timetable.css
@@ -437,6 +437,10 @@ div {
     margin-top:10px;
 }
 
+.pagination > ul {
+	overflow: hidden;
+}
+
 
 ::-webkit-input-placeholder::before { font-family: fontAwesome; content:'\f002  '; color: #69f }
 ::-moz-placeholder::before  { font-family: fontAwesome; content:'\f002  '; color: #69f } /* firefox 19+ */
@@ -513,7 +517,6 @@ input:-moz-placeholder::before  { font-family: fontAwesome; content:'\f002  ';
 
 	.pagination > ul {
 		max-width:320px;
-		overflow: hidden;
 	}
   .fc-event-container {
     width:95% !important;
